                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 28-04-2006 fixed: Viewport intersection wasn't working correctly, which meant some images with aspectratio set to scale could render outside their borders.
 - 27-04-2006 fixed: Big list view didn't show the thumb overlays.
 - 27-04-2006 fixed: Missing Database label message was not displayed correctly when GUI animations were performed.
 - 27-04-2006 changed: removed the 'search imdb' item from context menu since it's not contextual. use the button on the left instead.
 - 27-04-2006 changed: XBE titles are now converted from string charset, rather from UTF16.
 - 27-04-2006 changed: Playlists location is now a bookmark in Music and Videos.
 - 27-04-2006 changed: switched info/title remote mappings in visualisation window.
 - 27-04-2006 fixed: Settings item didn't show on context menu when in the root bookmark listing.
 - 27-04-2006 removed: Unused "Enter" button in XLink Kai.
 - 27-04-2006 changed: volume up/down/mute mapped to remote 3/6/9 in keymap.
 - 27-04-2006 fixed: [ 1475599 ] Watched movie bug.
 - 27-04-2006 changed: if contenttype indicate flv, skip probing in dvdplayer (skips one seek)
 - 27-04-2006 fixed: curl (http, shout) would fail to seek after hitting eof. 
 - 27-04-2006 fixed: Unnessecary HEAD request to last.fm servers resulting in an error log
 - 27-04-2006 changed: removed old python copy-string from Build.bat since it's no longer needed
 - 27-04-2006 fixed: [ 1463526 ] shoutcast mp2 streaming broken
 - 27-04-2006 updated: python is updated to version 2.4.3 and now moved into a dll. Do not forget to update the system folder
 - 27-04-2006 fixed: [ 1475703 ] LCD and .xbe playing message